@@ -1,5 +1,9 @@
 2008-07-27  Mirco Bauer <meebey@meebey.net> 
 
+	* IrcGroupChatView.cs: Added whois to popup menu. (closes trac bug #57)
+
+2008-07-27  Mirco Bauer <meebey@meebey.net> 
+
 	* IrcGroupChatView.cs: Implemented Kick + Ban in popup menu. (closes trac
 	  bug #58)
 
